kubernetes/jaxrs-mysql-quarkus/jaxrs-mysql-quarkus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaxrs-mysql-quarkus
spec:
  selector:
    matchLabels:
      app: jaxrs-mysql-quarkus
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: frontend
        component: quarkus
        app: jaxrs-mysql-quarkus
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: jaxrs-mysql-quarkus
          image: yurak/jaxrs-mysql-quarkus:latest@sha256:ac44d785e6b84eb50a40357277cc3537403188fcf7063dc40627cef3d0050561
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 8080
              path: /q/health/live
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              port: 8080
              path: /q/health/ready
            initialDelaySeconds: 10
            periodSeconds: 30
