kubernetes/jaxrs-mysql-quarkus/jaxrs-mysql-quarkus-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaxrs-mysql-quarkus-monitoring
  namespace: monitoring
spec:
  type: ExternalName
  externalName: jaxrs-mysql-quarkus.default.svc.cluster.local
