kubernetes/jaxrs-mysql-quarkus/jaxrs-mysql-quarkus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaxrs-mysql-quarkus
spec:
  type: ClusterIP
  selector:
    app: jaxrs-mysql-quarkus
  ports:
  - protocol: TCP
    port: 8080
